# CG-2022

./: .gitignore  AuxiliarMethods.cpp  BoxGenerator.cpp  PlaneGenerator.cpp  Point.h  README.md  SphereGenerator.cpp  generator.cpp  sphere_cone.cpp  xmlReader.cpp  xmlReader.hpp  xml_syntax.xml
Engine3D/: AuxiliarMethods.cpp  AuxiliarMethods.h  Box.cpp  Box.h  BoxGenerator.cpp  BoxGenerator.h  CMakeLists.txt  Cone.h  ConeGenerator.cpp  ConeGenerator.h  Engine.cpp  Generator.h  Plane.h  PlaneGenerator.cpp  PlaneGenerator.h  Point.h  SolidGenerator.cpp  Sphere.h  SphereGenerator.cpp  SphereGenerator.h  box.3d  cone.3d  plane.3d  sphere.3d  xmlReader.cpp  xmlReader.hpp  xml_syntax.xml
Engine3D/Auxiliar/: AuxiliarMethods.cpp  AuxiliarMethods.h  Point.h  catmull-rom.cpp  catmull-rom.h
Engine3D/Engine/: Engine.cpp
Engine3D/Generator/: BenzierGenerator.cpp  BenzierGenerator.h  BezierGenerator.cpp  BezierGenerator.h  BoxGenerator.cpp  BoxGenerator.h  ConeGenerator.cpp  ConeGenerator.h  Generator.cpp  Generator.h  Generator.vcxproj  Generator.vcxproj.filters  Model.cpp  Model.h  PlaneGenerator.cpp  PlaneGenerator.h  SphereGenerator.cpp  SphereGenerator.h  TorusGenerator.cpp  TorusGenerator.h  box.3d  cone.3d  plane.3d
Engine3D/Generator/Debug/: Generator.exe.recipe  Generator.ilk  vc143.idb
Engine3D/Generator/Debug/Generator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Generator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Engine3D/Generator/Release/: Generator.exe.recipe  Generator.iobj  Generator.ipdb
Engine3D/Generator/Release/Generator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Generator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Engine3D/Models/: Box.cpp  Box.h  Cone.cpp  Cone.h  Model.cpp  Model.h  Models.h  Plane.cpp  Plane.h  Point.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h
Engine3D/PatchRandomizer/: bezierRandomizer.py
Engine3D/Testes/: SistemaSolar.xml
Engine3D/Testes/Hall_of_Fame/: Teste2.xml
Engine3D/Testes/SolarSystem/: SistemaSolar.xml  plane.3d  sol.3d  sphere.3d  teapot.3d  torus.3d
Engine3D/Testes/Test1/: Teste1.xml  box.3d  cone.3d  parede.3d  sphere.3d  teapot.3d
Engine3D/XMLReader/: xmlReader.cpp  xmlReader.hpp
Generator/SolidGenerator/: SolidGenerator.sln
Generator/SolidGenerator/SolidGenerator/: Box.h  BoxGenerator.cpp  BoxGenerator.h  Cone.h  ConeGenerator.cpp  Plane.h  PlaneGenerator.cpp  SolidGenerator.aps  SolidGenerator.cpp  SolidGenerator.vcxproj  SolidGenerator.vcxproj.filters  Sphere.h  SphereGenerator.cpp  SphereGenerator.h  resource.h  sphere.3d
Generator/SolidGenerator/SolidGenerator/x64/Release/: SolidGenerator.exe.recipe  SolidGenerator.iobj  SolidGenerator.ipdb
Generator/SolidGenerator/SolidGenerator/x64/Release/SolidGenerator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SolidGenerator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
